--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "type-check": "tsc --noEmit --project tsconfig.app.json"
+    "type-check": "tsc --noEmit --project tsconfig.app.json",
+    "test": "vitest run",
+    "test:auth": "vitest run src/services/apiClient.auth.test.ts"
   },
   "dependencies": {
     "i18next": "^25.3.2",
@@ -40,6 +42,8 @@
     "vite": "^7.0.3",
     "unplugin-auto-import": "^19.3.0",
     "source-map": "^0.7.6",
-    "jiti": "^2.6.1"
+    "jiti": "^2.6.1",
+    "vitest": "^2.1.0",
+    "ts-node": "^10.9.2"
   }
 }
